--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-gulp-drupal",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Drupal theme with Gulp, Babel, UglifyJS, PostCSS,  Imagemin, BrowserSync.",
   "homepage": "",
   "author": {
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "chalk": "^1.0.0",
+    "lodash.snakecase": "^4.0.1",
     "mkdirp": "^0.5.1",
     "yeoman-generator": "^0.22.0",
     "yosay": "^1.0.2"
